force-app/main/default/objects/MC_SMS__e/MC_SMS__e.object-meta.xml
<CustomObject>
    <label>MC SMS</label>
    <pluralLabel>MC SMS</pluralLabel>
</CustomObject>