force-app/main/default/objects/MC_SMS__e/fields/countryCode__c.field-meta.xml
<CustomField>
    <fullName>countryCode__c</fullName>
    <label>countryCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>