force-app/main/default/objects/MC_SMS__e/fields/messageContent__c.field-meta.xml
<CustomField>
    <fullName>messageContent__c</fullName>
    <label>messageContent</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>