force-app/main/default/objects/MC_SMS__e/fields/mobileNumber__c.field-meta.xml
<CustomField>
    <fullName>mobileNumber__c</fullName>
    <label>mobileNumber</label>
    <length>55</length>
    <type>Text</type>
</CustomField>