force-app/main/default/objects/MC_SMS__e/fields/reformatNumber__c.field-meta.xml
<CustomField>
    <fullName>reformatNumber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>reformatNumber</label>
    <type>Checkbox</type>
</CustomField>